* commit b7c8907be51eeac933198eeaa93725b37d020bd2
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Wed Feb 26 10:45:56 2014 -0500
| 
|     Now integrated a more efficient way to do the FFT. Still investigating the costs in accuracy. The new FFT only works with FFTW at the moment. Input options have changed: -nangle is now -norientations, -ngrid has split into -ngrain and -nscatter. I've written test-changes.sh which should run cases for spheres, sphere, ellipsoid for both experimental fft and the old fft with padding. I also added an additional module called 'constants.f03' which should contain things like pi, twopi, etc. SPHERES MODULE IS CURRENTLY INOPERABLE (outputs mostly NaN values)
|  
* commit c2f03c65e8f5766789ec020a1e20ef0d8497b641
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Feb 17 17:26:14 2014 -0500
| 
|     OK, experimental fft 'works,' but in some cases produces very high power at the bottom left corner of the plot. Also, the 'center' function appears not to work (or the theta values are off) for the regular fft.
|  
* commit c39af6f88a876b9a742026170da0bf2c8de3c3bc
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Mon Feb 17 10:39:19 2014 -0500
| 
|     Making progress on experimental FFT. Compiles, but does not work at the moment.
|  
* commit 79e197026d9c336ed08a54d5b41c918c042161cb
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Thu Feb 6 00:58:18 2014 -0500
| 